--- a/Sof.Vlc.Http/Sof.Vlc.Http.csproj
+++ b/Sof.Vlc.Http/Sof.Vlc.Http.csproj
@@ -18,7 +18,11 @@
 
   <ItemGroup>
     <PackageReference Include="Fody" Version="2.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Polly" Version="5.3.1" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.1.4" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
     <PackageReference Include="System.Net.Ping" Version="4.3.0" />
     <PackageReference Include="System.Threading.Tasks.Parallel" Version="4.3.0" />
     <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
