--- a/VISE/VISE.csproj
+++ b/VISE/VISE.csproj
@@ -56,10 +56,76 @@
     <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BubbleSeekBar, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\BubbleSeekBar.1.0.0\lib\BubbleSeekBar.dll</HintPath>
+    <Reference Include="AFollestad.MaterialDialogs.Commons, Version=0.9.4.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AFollestad.MaterialDialogs.Commons.0.9.4.4\lib\MonoAndroid71\AFollestad.MaterialDialogs.Commons.dll</HintPath>
+    </Reference>
+    <Reference Include="AFollestad.MaterialDialogs.Core, Version=0.9.4.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\AFollestad.MaterialDialogs.Core.0.9.4.4\lib\MonoAndroid71\AFollestad.MaterialDialogs.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Akavache, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\akavache.core.5.0.0\lib\MonoAndroid\Akavache.dll</HintPath>
+    </Reference>
+    <Reference Include="Akavache.Sqlite3, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\akavache.sqlite3.5.0.0\lib\Portable-Net45+Win8+WP8+Wpa81\Akavache.Sqlite3.dll</HintPath>
+    </Reference>
+    <Reference Include="Cheeseknife, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MisterJimson.Cheeseknife.1.1.0\lib\MonoAndroid10\Cheeseknife.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\netstandard1.3\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Polly, Version=5.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Polly.5.3.1\lib\netstandard1.1\Polly.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\MonoAndroid10\RestSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.2.5.0\lib\netstandard1.3\Serilog.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.File, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.File.3.2.0\lib\netstandard1.3\Serilog.Sinks.File.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.RollingFile, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.RollingFile.3.3.0\lib\netstandard1.3\Serilog.Sinks.RollingFile.dll</HintPath>
+    </Reference>
+    <Reference Include="Serilog.Sinks.Xamarin.Droid, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Serilog.Sinks.Xamarin.0.1.29\lib\MonoAndroid403\Serilog.Sinks.Xamarin.Droid.dll</HintPath>
+    </Reference>
+    <Reference Include="Splat, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Splat.2.0.0\lib\MonoAndroid403\Splat.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.batteries_e_sqlite3, Version=1.0.0.0, Culture=neutral, PublicKeyToken=17faffbb2a73a73f, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.bundle_e_sqlite3.1.1.8\lib\MonoAndroid\SQLitePCLRaw.batteries_e_sqlite3.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.batteries_v2, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8226ea5df37bcae9, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.bundle_e_sqlite3.1.1.8\lib\MonoAndroid\SQLitePCLRaw.batteries_v2.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1488e028ca7ab535, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.core.1.1.8\lib\MonoAndroid\SQLitePCLRaw.core.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.lib.e_sqlite3, Version=1.0.0.0, Culture=neutral, PublicKeyToken=e4ad490600e2234c, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.lib.e_sqlite3.android.1.1.8\lib\MonoAndroid\SQLitePCLRaw.lib.e_sqlite3.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.provider.e_sqlite3, Version=1.0.0.0, Culture=neutral, PublicKeyToken=9c301db686d0bd12, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.provider.e_sqlite3.android.1.1.8\lib\MonoAndroid\SQLitePCLRaw.provider.e_sqlite3.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Reactive.Core, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rx-Core.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rx-Interfaces.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rx-Linq.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rx-PlatformServices.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
@@ -93,6 +159,9 @@
     <Reference Include="Xamarin.Android.Support.Transition, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xamarin.Android.Support.Transition.25.4.0.2\lib\MonoAndroid70\Xamarin.Android.Support.Transition.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Android.Support.v13, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Xamarin.Android.Support.v13.25.4.0.2\lib\MonoAndroid70\Xamarin.Android.Support.v13.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Android.Support.v7.AppCompat, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xamarin.Android.Support.v7.AppCompat.25.4.0.2\lib\MonoAndroid70\Xamarin.Android.Support.v7.AppCompat.dll</HintPath>
     </Reference>
@@ -105,19 +174,36 @@
     <Reference Include="Xamarin.Android.Support.Vector.Drawable, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xamarin.Android.Support.Vector.Drawable.25.4.0.2\lib\MonoAndroid70\Xamarin.Android.Support.Vector.Drawable.dll</HintPath>
     </Reference>
+    <Reference Include="ZhangHai.Android.MaterialProgressBar, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZhangHai.Android.MaterialProgressBar.1.4.1\lib\MonoAndroid71\ZhangHai.Android.MaterialProgressBar.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
+    <Compile Include="Activies\SplashScreen.cs" />
+    <Compile Include="AkavacheSqliteLinkerOverride.cs" />
+    <Compile Include="Adapters\ComputerAdapter.cs" />
+    <Compile Include="Holders\ComputerViewHolder.cs" />
+    <Compile Include="Globals.cs" />
+    <Compile Include="Managers\DirectoryManager.cs" />
+    <Compile Include="Models\ComputerModel.cs" />
+    <Compile Include="Activies\MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScannerActivity.cs" />
+    <Compile Include="Activies\ScannerActivity.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\scan.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\splashscreen.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\main.xml">
@@ -126,11 +212,10 @@
     <AndroidResource Include="Resources\values\Strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\mipmap-hdpi\" />
-    <Folder Include="Resources\mipmap-mdpi\" />
-    <Folder Include="Resources\mipmap-xhdpi\" />
-    <Folder Include="Resources\mipmap-xxhdpi\" />
-    <Folder Include="Resources\mipmap-xxxhdpi\" />
+    <ProjectReference Include="..\Sof.Vlc.Http\Sof.Vlc.Http.csproj">
+      <Project>{21b5b413-3aef-4c48-adf4-9a543d75719f}</Project>
+      <Name>Sof.Vlc.Http</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-mdpi\ic_done_black_18dp.png" />
@@ -187,10 +272,76 @@
     <AndroidResource Include="Resources\values-pt-rBR\strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Sof.Vlc.Http\Sof.Vlc.Http.csproj">
-      <Project>{4bc400ad-f426-4069-a53d-64fa1473996b}</Project>
-      <Name>Sof.Vlc.Http</Name>
-    </ProjectReference>
+    <AndroidResource Include="Resources\drawable\ic_add_to_queue_black_48dp.xml" />
+    <AndroidResource Include="Resources\drawable\ic_add_black_48dp.xml" />
+    <AndroidResource Include="Resources\layout\dialog_addcomputer.xml" />
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\layout\computercardview.xml" />
+    <AndroidResource Include="Resources\drawable\pin.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_black_18dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_black_48dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_grey600_18dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_grey600_24dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_grey600_36dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_grey600_48dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_white_18dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_white_36dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_pin_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_black_18dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_black_48dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_grey600_18dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_grey600_24dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_grey600_36dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_white_18dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_grey600_48dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_white_36dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_pin_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_black_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_black_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_grey600_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_grey600_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_grey600_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_grey600_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_white_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_white_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_pin_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_black_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_black_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_grey600_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_grey600_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_grey600_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_grey600_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_white_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_white_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_pin_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_black_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_black_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_black_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_grey600_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_grey600_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_grey600_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_grey600_48dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_white_18dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_white_36dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_pin_white_48dp.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Compat.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Compat.targets')" />
@@ -210,6 +361,8 @@
     <Error Condition="!Exists('..\packages\Xamarin.Android.Support.v7.RecyclerView.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v7.RecyclerView.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Android.Support.v7.RecyclerView.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v7.RecyclerView.targets'))" />
     <Error Condition="!Exists('..\packages\Xamarin.Android.Support.Transition.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Transition.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Android.Support.Transition.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Transition.targets'))" />
     <Error Condition="!Exists('..\packages\Xamarin.Android.Support.Design.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Design.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Android.Support.Design.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Design.targets'))" />
+    <Error Condition="!Exists('..\packages\NETStandard.Library.2.0.0\build\netstandard2.0\NETStandard.Library.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NETStandard.Library.2.0.0\build\netstandard2.0\NETStandard.Library.targets'))" />
+    <Error Condition="!Exists('..\packages\Xamarin.Android.Support.v13.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v13.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Xamarin.Android.Support.v13.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v13.targets'))" />
   </Target>
   <Import Project="..\packages\Xamarin.Android.Support.Core.UI.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Core.UI.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Core.UI.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Core.UI.targets')" />
   <Import Project="..\packages\Xamarin.Android.Support.Core.Utils.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Core.Utils.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Core.Utils.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Core.Utils.targets')" />
@@ -222,6 +375,8 @@
   <Import Project="..\packages\Xamarin.Android.Support.v7.RecyclerView.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v7.RecyclerView.targets" Condition="Exists('..\packages\Xamarin.Android.Support.v7.RecyclerView.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v7.RecyclerView.targets')" />
   <Import Project="..\packages\Xamarin.Android.Support.Transition.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Transition.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Transition.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Transition.targets')" />
   <Import Project="..\packages\Xamarin.Android.Support.Design.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Design.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Design.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.Design.targets')" />
+  <Import Project="..\packages\NETStandard.Library.2.0.0\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.0\build\netstandard2.0\NETStandard.Library.targets')" />
+  <Import Project="..\packages\Xamarin.Android.Support.v13.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v13.targets" Condition="Exists('..\packages\Xamarin.Android.Support.v13.25.4.0.2\build\MonoAndroid70\Xamarin.Android.Support.v13.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 		Other similar extension points exist, see Microsoft.Common.targets.
 		<Target Name="BeforeBuild">
