--- a/VISE/packages.config
+++ b/VISE/packages.config
@@ -5,28 +5,28 @@
   <package id="akavache" version="5.0.0" targetFramework="monoandroid71" />
   <package id="akavache.core" version="5.0.0" targetFramework="monoandroid71" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="monoandroid80" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="MisterJimson.Cheeseknife" version="1.1.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
-  <package id="Polly" version="5.3.1" targetFramework="monoandroid71" />
-  <package id="RestSharp" version="105.2.3" targetFramework="monoandroid71" />
+  <package id="Polly" version="5.6.1" targetFramework="monoandroid80" />
+  <package id="RestSharp" version="106.2.0" targetFramework="monoandroid80" />
   <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Main" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="monoandroid71" />
-  <package id="Serilog" version="2.5.0" targetFramework="monoandroid71" />
-  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="monoandroid71" />
+  <package id="Serilog" version="2.6.0" targetFramework="monoandroid80" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="monoandroid80" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="monoandroid71" />
   <package id="Serilog.Sinks.Xamarin" version="0.1.29" targetFramework="monoandroid71" />
   <package id="Splat" version="2.0.0" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.8" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid71" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.core" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.9" targetFramework="monoandroid80" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
@@ -62,33 +62,37 @@
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="monoandroid80" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="VectorCompat" version="1.0.5.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.UI" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Design" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Fragment" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Transition" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v13" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="ZhangHai.Android.MaterialProgressBar" version="1.4.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Annotations" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Compat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.UI" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Design" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Fragment" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Transition" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v13" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="ZhangHai.Android.MaterialProgressBar" version="1.4.2" targetFramework="monoandroid80" />
 </packages>
